# DedalMCP

./: .gitignore  README.md  pyproject.toml
docs/: PRESETS.md
extras/blender_plugin/: dedal_preset_editor.py
extras/godot/: vertex_color.gdshader
extras/unity/: VertexColor.shader
src/dedal_mcp/: __init__.py  __main__.py  blender_rpc.py  blender_rpc_client.py  blender_runner.py  engine_profiles.py  script_builder.py  server.py  vertex_colors.py
src/dedal_mcp/comfyui/: __init__.py  client.py  workflow.py
src/dedal_mcp/presets/: __init__.py  architecture.py  loader.py  primitives.py  props.py
src/dedal_mcp/presets/data/: barrel.json  capsule.json  chair.json  cone.json  crate.json  cube.json  cylinder.json  house.json  pillar.json  plane.json  ramp.json  rock.json  sphere.json  stairs.json  table.json  torus.json  tree_pine.json  tree_round.json  wall.json
src/dedal_mcp/presets/types/: __init__.py  composite.py  geometry_nodes.py  mesh_data.py  safe_eval.py  script_template.py
src/dedal_mcp/render/: __init__.py  config.py  script_builder.py
